[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universalasync"
dynamic = ["version"]
description = "A library to help automate the creation of universal python libraries"
readme = "README.md"
license = "MIT"
authors = [{ name = "MrNaif2018", email = "chuff184@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "async",
    "await",
    "bitcart",
    "universal",
    "sync",
    "asyncio",
    "asynctosync",
    "synctoasync",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bitcart/universalasync"
Source = "https://github.com/bitcart/universalasync"
Changelog = "https://github.com/bitcart/universalasync/blob/master/CHANGELOG.md"

[dependency-groups]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "mypy"]
docs = [
    "commonmark",
    "mock",
    "pillow",
    "recommonmark",
    "sphinx",
    "sphinx-rtd-theme",
]
all = [{ include-group = 'dev' }, { include-group = 'docs' }]

[tool.uv]
default-groups = ["dev"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "universalasync/version.py" },
]

[tool.hatch.version]
path = "universalasync/version.py"

[tool.hatch.build.targets.wheel]
packages = ["universalasync"]

[tool.ruff]
target-version = "py39"
line-length = 127

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
]
ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--cov=universalasync", "--cov-report", "term-missing"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.coverage.run]
omit = [
    "*__init__.py",
    "tests/*",
    "venv/*",
    "env/*",
    "universalasync/version.py",
    "setup.py",
]
